--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 		
 		<!-- Tus redes sociales -->	
 			<footer id="footer">
-                <h4> Para mayor información sigueme en mis redes<br />
+                <h4><strong>Para mayor información sigueme en mis redes</strong><br />
 				<ul class="icons">
 					<!-- Conoce todos los íconos en http://fontawesome.io/icons/ -->
 					<!-- Solamente cambias en class="icon fa-IconoQueTuQuieras" -->
