--- a/index.html
+++ b/index.html
@@ -56,9 +56,12 @@
                         <div class="row">
                             <div class="6u 12u$(xsmall)">
                                 <!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->
+                                </br>
+                                </br>
+                                <h6>Zona rural municipio de Cajamarca</h6>
                                 <a href="#" target="_blank" class="image fit thumb">
                                     <!-- Tu portafolio - Su imagen -->
-                                    <img src="./images/Imag002.jpg" />
+                                    <img src="./images/Imag005.jpg" />
                                 </a>         
                             </div>
                             
@@ -83,7 +86,7 @@
                                 <!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->
                                 <a href="#" target="_blank" class="image fit thumb">
                                     <!-- Tu portafolio - Su imagen -->
-                                    <img src="./images/imag003.jpg" />
+                                    <img src="./images/Imag004.jpg" />
                                 </a>
                             </div>
                         </div>
