--- a/index.html
+++ b/index.html
@@ -170,10 +170,9 @@
                             <!-- Título del Portafolio-->
                             <h2><strong>Área Hidrocarburos</strong></h2>
                             <!--Descripción de título-->
-                            <p>
-                                ° Análisis de calidad para muestras de crudo y agua de formación bajo estandares ASTM (salinidad, BSW por Karl Fisher y por decantación, determinación de cloruros, determinación de grado API, determinación de Solidos Suspendidos)</br>
-                                ° Calibración de equipos para el análisis fisicoquímico de muestras de crudo.</br>
-                                ° Efectuar trámites ambientales para la adquisición de permisos de emisiones, vertimientos y manejo de residuos peligrosos ante autoridades distritales y regionales.</br>
+                            <p> ° Análisis de calidad para muestras de crudo y agua de formación bajo estandares ASTM (salinidad, BSW por Karl Fisher y por decantación, determinación de cloruros, determinación de grado API, determinación de Solidos Suspendidos)</br>
+                                ° Calibración de equipos e instrumentos para el análisis fisicoquímicos me muestras de crudo y aguas de formación e inyección.</br>
+                                ° Interpretación de los resultados de análisis fisicoquímicos para la detección de fallas en el proceso de tratamiento así como establecer mejoras al proceso productivo.</br>
                             </p>
                             <a href="#" class="image fit"><img src="./images/Imag009.jpeg" alt="" /></a>
                         </article>
@@ -193,20 +192,24 @@
                 </section>
 
                             <!-- Three -->
-                            <section id="fourth">
+                            <<section id="fourth">
                                 <h2><strong>Contactame</strong></h2>
                                 <div class="row">
                                     <div class="8u 12u$(small)">
-                                        <form method="post" action="#">
+                                        <form name="frmContacto" form method="post" action="mailsendby.php">
                                             <div class="row uniform 50%">
                                                 <div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
                                                 <div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
                                                 <div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
                                             </div>
-                                        </form>
-                                        <ul class="actions">
+                                            <td colspan="2" style="text-align:right">
+                                                <input type="submit" value="Enviar">
+                                            </td>
+                                        </formform>
+
+                                        <!--<ul class="actions">
                                             <li><input type="submit" value="Send Message" /></li>
-                                        </ul>
+                                        </ul>-->
                                     </div>
                                     <div class="4u$ 12u$(small)">
                                         <ul class="labeled-icons">
@@ -228,7 +231,7 @@
                                     </div>
                                 </div>
                             </section>
-</div>
+</div> -->
 
 		<!-- Footer -->
 		
