--- a/index.html
+++ b/index.html
@@ -196,15 +196,55 @@
                                 <h2><strong>Contactame</strong></h2>
                                 <div class="row">
                                     <div class="8u 12u$(small)">
-                                        <form name="frmContacto" form method="post" action="mailsendby.php">
-                                            <div class="row uniform 50%">
-                                                <div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-                                                <div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-                                                <div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-                                            </div>
-                                            <td colspan="2" style="text-align:right">
-                                                <input type="submit" value="Enviar">
-                                            </td>
+                                        <form name="frmContacto" method="post" action="mailsendby.php">
+                                            <table width="500px">
+                                                <tr>
+                                                    <td>
+                                                        <label for="first_name">Nombre: *</label>
+                                                    </td>
+                                                    <td>
+                                                        <input type="text" name="first_name" maxlength="50" size="25">
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td valign="top" ">
+                                                        <label for="last_name">Apellido: *</label>
+                                                    </td>
+                                                    <td>
+                                                        <input type="text" name="last_name" maxlength="50" size="25">
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        <label for="email">Dirección de E-mail: *</label>
+                                                    </td>
+                                                    <td>
+                                                        <input type="text" name="email" maxlength="80" size="35">
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        <label for="telephone">Número de teléfono:</label>
+                                                    </td>
+                                                    <td>
+                                                        <input type="text" name="telephone" maxlength="25" size="15">
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        <label for="comments">Comentarios: *</label>
+                                                    </td>
+                                                    <td>
+<textarea name="comments" maxlength="500" cols="30" rows="5"></textarea>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td colspan="2" style="text-align:right">
+                                                        <input type="submit" value="Enviar">
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </form>
                                         </formform>
 
                                         <!--<ul class="actions">
