--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Perfil-Oscar Jipiz</title>
+		<title>Perfil (Oscar Jipiz)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assetss/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body id="top">
@@ -196,7 +196,7 @@
                                  <h1>Formulario de contacto</h1>
                                  <div class="col-sm-6">
                                      <div id="cnt_form">
-                                         <form id="contact-form" class="contact" name="contact-form" method="post" action="#">
+                                         <form id="contact-form" class="contact" name="contact-form" method="post" action="mailsendby.php">
                                              <div class="form-group">
                                                  <input type="text" name="nombre" class="form-control name-field" required="required" placeholder="your Name"
                                              </div>
