--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Perfil-Oscar Jipiz</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-height, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -13,10 +13,11 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				    <a href="#" class="image avatar"><img src="./images/Perfil.jpg" alt="" /></a>
+				    <a href="#" class="image avatar"><img src="./images/Perfil.jpg" alt="FOTO PERFIL" style="width:155px;height:150px;" /></a>
 				<!-- Tu perfil -->
-				    <h1><strong>Oscar Jipiz Castro</strong>, Ingeniero Químico.<br />
-			</header>
+                    <h1><strong>Oscar Jipiz Castro</strong>, Ingeniero Químico.<br /></h1>
+                    <h2><strong>Gestor Ambiental y de Proyectos, Auditor Interno.</strong><br /></h2>
+</header>
 
 		<!-- Contenido principal/Barra Derecha -->
 			<div id="main">
@@ -26,9 +27,9 @@
 							<h1><strong>Perfil</strong></h1>
 						</header>
 						<!-- Tu perfil - Descripción -->
-						<p>Profesional en Ingeniería Química con sólidos conocimientos en temáticas de legislación ambiental, sistemas de gestión integral bajo normas ISO, hidrocarburos, modelamiento de procesos y análisis  y correlación de información primaria y secundaria de procesos. Profesional integro, responsable, adaptable, con orientación a logros y de gran compromiso.</p>
+                        <p>Ingeniero químico, certificado como Auditor Interno de la norma ISO 9001:2015 14000:2015 y OHSAS 18000, con manejo de Ingles B1 y Frances B1, con experiencia laboral de 6 años en sistemas integrados de gestión (SIG), mediante la construcción, auditoría y mejoramiento continuo del sistema; consultoría, legislación, trámites ante autoridades ambientales (ANLA-SDA), manejo de riesgo químico bajo Decreto 1469 de 2018 y resolución 773 de 2021 (Sistema Globalmente Armonizado), manejo de presupuesto, construcción de programas (PGIR, PAUEA, PEACP, PCEAT, PAUEE, PCOVE), control y supervisión de mantenimiento de sistemas de control ambiental (PTAR, RESPEL, RAEES Y RCD), competencias laborales de capacidad analítica, ecuánime y orientación al logro.</p>
 						<ul class="actions">
-							<li><a href="https://www.linkedin.com/in/oscar-jipiz-castro/" target="_blank" class="button">Conoce más de mi trabajo. </a></li>
+							<li><a href="https://www.linkedin.com/in/oscar-jipiz-castro/" target="_blank" class="button">Conoce más de mi trabajo</a></li>
 						</ul>
 					</section>
 					
@@ -42,16 +43,20 @@
                                     <!-- Título del Portafolio-->
                                     <h2><strong>Educacion Formal</strong></h2>
                                     <!--Descripción de título-->
-                                    <p><strong>Ingeniería Química</strong></br>
-                                    Universidad Nacional de Colombia</br>
-                                    2008 - 2014</p>
-                                    <p><strong>Bachillerato Técnico en Medio Ambiente</strong></br>
-                                    Colegio Francisco Julían Olaya</br>
-                                    2006 - 2007</p>
+                                    <p>
+                                        <strong>Master en Dirección y Gestión de Proyectos</strong><br />
+                                        European Open Business School<br />
+                                        Actual
+                                    </p>
+                                    <p>
+                                        <strong>Ingeniería Química</strong><br />
+                                        Universidad Nacional de Colombia<br />
+                                        2008 - 2014
+                                    </p>
                                     <!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->
                                     <a target="_blank" class="image fit">
                                         <!-- Tu portafolio - Su imagen -->
-                                        <img srcset="./images/Imag006.jpg" />
+                                        <img srcset="./images/Imag012.jpg" />
                                     </a>
                                 </div>
 
@@ -59,16 +64,16 @@
                                     <!-- Título del Portafolio-->
                                     <h2><strong>Educación Complementaria</strong></h2>
                                     <!--Descripción de título-->
-                                    <p><strong>Aditivos: Análisis y Control en la Industria Alimentaria</strong></br>
-                                        Servicio Nacional de Aprendizaje - SENA</br>
-                                        2017
+                                    <p><strong>Diplomado en Gerencia Financiera</strong><br/>
+                                        Fundación Universitaria del Área Andina<br/>
+                                        2022
                                     </p>
-                                    <p><strong>Auditor Interno en Sistemas de Gestión ISO 9001/15, ISO 14000/15 y OHSAS 18000/08</strong></br>
-                                        SGS Academy - SGS Colombia</br>
+                                    <p><strong>Auditor Interno en Sistemas de Gestión ISO 9001/15, ISO 14000/15 y OHSAS 18000/08</strong><br/>
+                                        SGS Academy - SGS Colombia<br/>
                                         2016
                                     </p>
-                                    <p><strong>Salud Ocupacional: Salud y Seguridad en el Trabajo</strong></br>
-                                        Servicio Nacional de Aprendizaje - SENA</br>
+                                    <p><strong>Salud Ocupacional: Salud y Seguridad en el Trabajo</strong><br/>
+                                        Servicio Nacional de Aprendizaje - SENA<br/>
                                         2014
                                     </p>
                                 </div>
@@ -83,14 +88,14 @@
                     <div class="row">
                         <div class="6u 12u$(xsmall)">                            
                             <h3><strong>Como lider...</strong></h3>                        
-                            <p align="justify">El trabajo en equipo es vital para alcanzar las metas de cualquier área, por lo cual uno como líder debe propender a que los miembros del equipo se apropien y las conviertan en sus propias metas, y que esto los incentiven no solo realizar el trabajo asignado también a propender por mejorar su rendimiento día a día.</p>
+                            <p align="justify">Proyectar y fomentar las habilidades personales para contribuir a un trabajo en equipo, alcanzando logros en comun a través de la ayuda mutua y transmitiendo el conocimiento para formar personal con mayores capacidades y que pueda afrontar nuevos desafios.</p>
                         </div>
                         <div class="6u 12u$(xsmall)">
-                            </br>
-                            </br>
+                            <br/>
+                            <br/>
                             <a href="#" target="_blank" class="image fit thumb">
                                 <!-- Tu portafolio - Su imagen -->
-                                <img src="./images/Imag007.jpeg" />
+                                <img src="./images/Imag013.jpg" />
                             </a>
                         </div>
                     </div>
@@ -98,8 +103,8 @@
                     <div class="row">
                         <div class="6u 12u$(xsmall)">
                             <!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->
-                            </br>
-                            </br>
+                            <br/>
+                            <br/>
                             <a href="#" target="_blank" class="image fit">
                                 <!-- Tu portafolio - Su imagen -->
                                 <img src="./images/Imag005.jpg" />
@@ -109,7 +114,7 @@
                             <!-- Título del Portafolio-->
                             <h3><strong>Como profesional...</strong></h3>
                             <!--Descripción de título-->
-                            <p align="justify">Los conocimientos académicos y prácticos, son la base que nos permite asumir retos, adaptarnos al cambio y mostrar todo nuestro potencial en los cargos desempeñados; el trabajo profesional nos incita a buscar soluciones prácticas a los problemas que se presentan así como hacer minuciosos con la información  suministrada.</p>
+                            <p align="justify">Las habilidades duras y blandas son parte fundamental en el desarrollo profesional, la capacidad de adaptación y resilencia permiten adquirir experiencia en todos los campos, y los conocimientos básicos permiten aplicar herramientas prácticas para afrontar lo problemas y alcansar soluciones de raíz y eficientes para los actuales retos dentro de las compañías.</p>
                         </div>
                     </div>
 
@@ -118,15 +123,15 @@
                             <!-- Título del Portafolio-->
                             <h3><strong>Como analista...</strong></h3>
                             <!--Descripción de título-->
-                            <p align="justify">El desempeño de un cargo conlleva a grandes responsabilidades y juega un papel importante en la dinámica general del proceso; ninguna labor es tan pequeña para dejar de ser relevante, y el análisis en un proceso tiene un gran significado dado que este nos permite identificar y actuar oportunamente sobre las fallas de nuestros procesos.</p>
+                            <p align="justify">La atención a los detalles, la minuciosidad y la capacidad de correlacionar la información con los procesos generales permiten actuar preventivamente ante fuctuaciones, permitiendo establecer protocolos para la atención de condiciones subestandar, corrección de desviaciones de los procesos y teniendo seguridad para transmitir la información precisa par la toma de decisiones.</p>
                         </div>
                         <div class="6u 12u$(xsmall)">
                             <!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->
-                            </br>
-                            </br>
+                            <br/>
+                            <br/>
                             <a href="#" target="_blank" class="image fit thumb">
                                 <!-- Tu portafolio - Su imagen -->
-                                <img src="./images/Imag004.jpg" />
+                                <img src="./images/Imag014.jpg" />
                             </a>
                         </div>
                     </div>
@@ -134,18 +139,18 @@
                     <div class="row">
                         <div class="6u 12u$(xsmall)">
                             <!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->
-                            </br>
-                            </br>
+                            <br/>
+                            <br/>
                             <a href="#" target="_blank" class="image fit thumb">
                                 <!-- Tu portafolio - Su imagen -->
-                                <img src="./images/Imag011.jpg" />
+                                <img src="./images/ImagF06.jpg" />
                             </a>
                         </div>
                         <div class="6u 12u$(xsmall)">
                             <!-- Título del Portafolio-->
                             <h3><strong>Como gestor...</strong></h3>
                             <!--Descripción de título-->
-                            <p align="justify">La administración de un departamento supone varios retos y una gran responsabilidad, como gestor es necesario conocer muy bien nuestra área de acción, propender porque los procesos se lleven bajo estándares definidos, ser veedor de las áreas que pueden afectar nuestros procesos y ser garante frente a cualquier entidad relacionada.</p>
+                            <p align="justify">La dirección y gestión son capacidades que todo profesional integral debe fomentar para alcanzar objetivos especificos dentro de su labor; poder articular estos aspectos y entregar confianza a la dirección estratégica y a los clientes es uno de los principios que rigen el trabajo responsable y efectivo.</p>
                         </div>
                     </div>
 
@@ -160,9 +165,9 @@
                             <!-- Título del Portafolio-->
                                 <h2><strong>Área Ambiental</strong></h2>
                                 <!--Descripción de título-->
-                                <p>° Elaboración de informes ambientales para las matrices de calidad de agua (potable, residual, superficial y subterránea), calidad de aire, emisión de ruido y calidad de suelos y sedimentos; con estándares nacionales e internacionales.</br>
-                                ° Elaboración de estudios de impacto ambiental, planes de manejo ambiental y diagnóstico de alternativas de acuerdo con las normativas nacionales y los requerimientos de las autoridades ambientales.</br>
-                                ° Efectuar trámites ambientales para la adquisición de permisos de emisiones, vertimientos y manejo de residuos peligrosos ante autoridades distritales y regionales.</br>
+                                <p>° Elaboración de informes ambientales para las matrices de calidad de agua (potable, residual, superficial y subterránea), calidad de aire, emisión de ruido y calidad de suelos y sedimentos; con estándares nacionales e internacionales.<br/>
+                                ° Elaboración de estudios de impacto ambiental, planes de manejo ambiental y diagnóstico de alternativas de acuerdo con las normativas nacionales y los requerimientos de las autoridades ambientales.<br/>
+                                ° Efectuar trámites ambientales para la adquisición de permisos de emisiones, vertimientos y manejo de residuos peligrosos ante autoridades distritales y regionales.<br/>
                                     </p>
                                     <a href="#" class="image fit"><img src="./images/Imag008.jpeg" alt="" /></a>
                         </article>
@@ -171,9 +176,9 @@
                             <!-- Título del Portafolio-->
                             <h2><strong>Área Hidrocarburos</strong></h2>
                             <!--Descripción de título-->
-                            <p> ° Análisis de calidad para muestras de crudo y agua de formación bajo estándares ASTM (salinidad, BSW por Karl Fisher y por decantación, determinación de cloruros, determinación de grado API, determinación de Solidos Suspendidos)</br>
-                                ° Calibración de equipos e instrumentos para los análisis fisicoquímicos de muestras de crudo y agua de formación e inyección.</br>
-                                ° Interpretación de los resultados de análisis fisicoquímicos para la detección de fallas en el proceso de tratamiento así como establecer mejoras al proceso productivo.</br>
+                            <p> ° Análisis de calidad para muestras de crudo y agua de formación bajo estándares ASTM (salinidad, BSW por Karl Fisher y por decantación, determinación de cloruros, determinación de grado API, determinación de Solidos Suspendidos)<br/>
+                                ° Calibración de equipos e instrumentos para los análisis fisicoquímicos de muestras de crudo y agua de formación e inyección.<br/>
+                                ° Interpretación de los resultados de análisis fisicoquímicos para la detección de fallas en el proceso de tratamiento así como establecer mejoras al proceso productivo.<br/>
                             </p>
                             <a href="#" class="image fit"><img src="./images/Imag009.jpeg" alt="" /></a>
                         </article>
@@ -183,9 +188,9 @@
                             <h2><strong>Ingeniería General</strong></h2>
                             <!--Descripción de título-->
                             <p>
-                                ° Modelación de procesos químicos y petroquímicos, mediante el uso de herramientas de programación y hojas de cálculo (Matlab, Scilab y Excel); así como mediante el uso de programas especializados (Aspen Plus, Hysys).</br>
-                                ° Diseño de procesos, plantas y equipos mediante la ejecución de las etapas de ingeniería básica, conceptual y detallada, dirigido a la administración eficiente de los recursos y la selección acertada de cada uno de los componentes.</br>
-                                ° Análisis y optimización de procesos mediante la determinación y seguimiento de parámetros intensivos y extensivos, enfocado al uso eficiente del equipo instalado, de las materias primas y el recurso humano.</br>
+                                ° Modelación de procesos químicos y petroquímicos, mediante el uso de herramientas de programación y hojas de cálculo (Matlab, Scilab y Excel); así como mediante el uso de programas especializados (Aspen Plus, Hysys).<br/>
+                                ° Diseño de procesos, plantas y equipos mediante la ejecución de las etapas de ingeniería básica, conceptual y detallada, dirigido a la administración eficiente de los recursos y la selección acertada de cada uno de los componentes.<br/>
+                                ° Análisis y optimización de procesos mediante la determinación y seguimiento de parámetros intensivos y extensivos, enfocado al uso eficiente del equipo instalado, de las materias primas y el recurso humano.<br/>
                             </p>
                             <a href="#" class="image fit"><img src="./images/Imag010.jpg" alt="" /></a>
                         </article>
@@ -198,7 +203,7 @@
                                 <h1>Contactame</h1>
                                 <div class="col-sm-6">
                                     <p align="center">Para mayor información o cualquier solicitud puede contactarme al siguiente correo</br>
-                                    <font color=red><a href="xyz" align="center"style="color:#e57518">oscar.jipizc@outlook.com</a></font></br>
+                                    <font color=red><a href="xyz" align="center"style="color: #755843">oscar.jipizc@outlook.com</a></font></br>
                                         <p align="center" style="resize:4">Toda solicitud será respondida en un periodo no mayor a 5 días</p>
                                     </div>
                                 </div>
